✨ 음식점 사진 추가 및 삭제
